Fix some spacing issues

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -231,7 +231,7 @@ footer .inner .social .social-icon {
   position: relative;
   width: 100%;
   height: 100vh;
-  min-height: 600px;
+  min-height: 800px;
   background-color: #161216;
 }
 #myself header .indicator {
