--- a/source/stylus/myself/myself.styl
+++ b/source/stylus/myself/myself.styl
@@ -6,7 +6,7 @@
     position: relative
     width: 100%
     height: 100vh
-    min-height: 600px
+    min-height: 800px
     background-color: dark-background-color
 
     .indicator {
